Cliente PvP Modern 0.6.15: caratula real Spotify/YouTube en HUD musica.
Descarga la portada con NativeImage.read como 1.8.9, sin conversion manual de pixeles.

Co-authored-by: Cursor <cursoragent@cursor.com>